# LocalityBasedGraphAlgo

./: .gitignore  ReadMe.md
docker/: Dockerfile  ReadMe.md  build_img.sh  run_docker.py  run_docker.sh
scripts/: analyze_algo_quality.py
scripts/metrics/: link_belong_modularity.py
src/: CMakeLists.txt  input_output_handler.h  test_cis.cpp  test_demon.cpp
src/algorithm/: ReadMe.md  cis_algorithm.h  cis_sequential_algorithm.cpp  cis_sequential_algorithm.h
src/algorithm/parallel/: cis_algorithm.h
src/algorithm/sequential/: cis_sequential_algorithm.cpp  cis_sequential_algorithm.h  demon_seqential_algorithm.cpp  demon_sequential_algorithm.cpp  demon_sequential_algorithm.h  hk_grow_sequential_algorithm.cpp  hk_grow_sequential_algorithm.h  hr_grow_sequential_algorithm.cpp  hr_grow_sequential_algorithm.h
src/algorithm/sequential/deprecated_doc/: ReadMe.md
src/algorithm_demo/: CMakeLists.txt  ReadMe.md  demo_cis.cpp  demo_cis_previous.cpp  demo_demon.cpp  demo_hk_growth.cpp  demo_hr_growth.cpp
src/algorithm_runner/: test_cis.cpp  test_demon.cpp
src/deprecated/: CMakeLists.txt
src/deprecated/algorithm_parallel/: demon_algorithm.h
src/deprecated/evaluation_metrics/: input_output_handler.h  modularity.cpp
src/deprecated/parallel_utils/: ReadMe.md
src/deprecated/parallel_utils/detail/: ReadMe.md  dataflow_scheduler.h  fine_grained_merge_scheduler.h  reduce_scheduler.h
src/deprecated/parallel_utils/thoughts/: ReadMe.md
src/deprecated/test/: thread_pool_breakable_test.cpp  thread_pool_test.cpp
src/evaluation_metrics/: CMakeLists.txt  input_output_handler.h  modularity.h
src/parallel_utils/: ReadMe.md  dataflow_scheduler.h  reduce_scheduler.h
src/parallel_utils/detail/: ReadMe.md  dataflow_scheduler.h  fine_grained_merge_scheduler.h  reduce_scheduler.h  thread_pool_base.h
src/test/: CMakeLists.txt  thread_pool_breakable_test.cpp  thread_pool_test.cpp
src/util/: ReadMe.md  algorithm_helper.h  basic_io_helper.h  graph_io_helper.h
tutorial/: ReadMe.md
tutorial/quick-start/: ReadMe.md
